--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -4,3 +4,8 @@ selenium==3.141.0
 soupsieve==1.9
 urllib3==1.24.1
 pytest==4.4.0
+PyYAML==5.1
+flake8==3.7.7
+urllib3==1.24.1
+allure-pytest==2.6.2
+seleniumbase==1.22.9
